crates/iroha_derive/tests/config_base_ui_fail/invalid_attrs_commas.stderr
error: unexpected token; expected `default`, `env`, or `nested`
 --> tests/config_base_ui_fail/invalid_attrs_commas.rs:5:14
  |
5 |     #[config(,,,)]
  |              ^
